@@ -4,7 +4,6 @@ import static org.folio.innreach.util.ListUtils.mapItems;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -36,7 +35,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
 
 		var savedInnReachLocation = innReachLocationRepository.save(innReachLocation);
 
-    log.info("createInnReachLocation:: result: {}", innReachLocationMapper.mapToInnReachLocationDTO(savedInnReachLocation));
+    log.info("createInnReachLocation:: created Inn Reach Location: [{}]", savedInnReachLocation.getId());
 		return innReachLocationMapper.mapToInnReachLocationDTO(savedInnReachLocation);
 	}
 
@@ -60,7 +59,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
     locationsDTO.setLocations(locations);
     locationsDTO.setTotalRecords(locations.size());
 
-    log.info("getInnReachLocations:: result: {}", locationsDTO);
+    log.info("getInnReachLocations:: Fetched [{}] Inn Reach locations for given location IDs", locationsDTO);
     return locationsDTO;
   }
 
@@ -74,7 +73,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
     innReachLocationsDTO.setLocations(innReachLocations);
     innReachLocationsDTO.setTotalRecords(innReachLocations.size());
 
-    log.info("getAllInnReachLocations:: result: {}", innReachLocationsDTO);
+    log.info("getAllInnReachLocations:: Fetched [{}] Inn Reach locations", innReachLocationsDTO.getTotalRecords());
     return innReachLocationsDTO;
   }
 
@@ -82,7 +81,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
     return innReachLocationRepository.findAll(new OffsetRequest(offset, limit))
       .stream()
       .map(innReachLocationMapper::mapToInnReachLocationDTO)
-      .collect(Collectors.toList());
+      .toList();
   }
 
 	@Override
@@ -93,7 +92,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
     innReachLocation.setCode(innReachLocationDTO.getCode());
 		innReachLocation.setDescription(innReachLocationDTO.getDescription());
 
-    log.info("updateInnReachLocation:: result: {}", innReachLocationMapper.mapToInnReachLocationDTO(innReachLocation));
+    log.info("updateInnReachLocation:: Updated Inn Reach Location: [{}]", innReachLocationId);
 		return innReachLocationMapper.mapToInnReachLocationDTO(innReachLocation);
 	}
 
@@ -103,7 +102,7 @@ public class InnReachLocationServiceImpl implements InnReachLocationService {
     log.debug("deleteInnReachLocation:: parameters innReachLocationId: {}", innReachLocationId);
     InnReachLocation innReachLocation = findInnReachLocationById(innReachLocationId);
     innReachLocationRepository.delete(innReachLocation);
-    log.info("deleteInnReachLocation:: InnReach location deleted");
+    log.info("deleteInnReachLocation:: InnReach location deleted: [{}]", innReachLocationId);
 	}
 
   private InnReachLocation findInnReachLocationById(UUID innReachLocationId) {
